--- a/templates/Exam/addExam.html
+++ b/templates/Exam/addExam.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block css %}
 {% endblock %}
-{% block body %}
+{% block main-content %}
 <style>
     #card{
         background-color:white;
