--- a/templates/Exam/addQuestionsTutor.html
+++ b/templates/Exam/addQuestionsTutor.html
@@ -6,7 +6,7 @@
 
 <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/css/select2.min.css" rel="stylesheet" />
 <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/js/select2.min.js"></script>
-<div class="container">
+<div class="mt-5">
   {% if errors %}
   <div class="alert alert-danger" role="alert">
     <div id='errorsBox'>
@@ -23,7 +23,7 @@
     </div>
   </div>
   {% endif %}
-  <div class="container">
+  <div>
     <div class="col-xl-12 col-md-12 col-12 mt-5">
             <div class="statbox widget box box-shadow">
                 <div class="widget-header">
