--- a/templates/Notes/addNotesInstitute.html
+++ b/templates/Notes/addNotesInstitute.html
@@ -1,4 +1,4 @@
-{% extends 'dashboard/dashboard.html' %}
+{% extends 'dashboard/base.html' %}
 {% load static %}
 {% block css %}
 @import url('https://fonts.googleapis.com/css?family=Numans');
@@ -258,7 +258,7 @@ input:focus{
 
    
 {% endblock %}
-{% block body %}
+{% block main-content %}
 <div>
     {% if messages %}
     <div class="alert alert-warning" role="alert">
@@ -272,11 +272,11 @@ input:focus{
 </div>
 <div class="container">
     <div class="d-flex justify-content-center h-100">
-        <div class="card">
+        <div class="card" style="width: 100%;">
             <div class="card-header">
                 <div class="row">
                     <div class="col-sm">
-                        <h2 style="color: rgb(66, 8, 8);">Add Course Tutorials</h2>
+                        <h2 style="color: rgb(66, 8, 8);">Add Notes</h2>
                     </div>
                 </div>
             </div>
@@ -293,7 +293,7 @@ input:focus{
                                 <input type="file" class="custom-file-input" id="validatedCustomFile" required name="note" accept="application/pdf">
                                 <label class="custom-file-label" for="validatedCustomFile">Choose file...</label>
                                 <div class="invalid-feedback">Invalid File Format ( Valid Formats are .pdf only )</div>
-                                </div>
+                            </div>
                         </div>
                     </div>
                    <div class="input-group form-group">
@@ -362,4 +362,4 @@ input:focus{
     });
 </script>
 
-{% endblock %}
+{% endblock main-content %}
