--- a/templates/Notes/addNotesTutor.html
+++ b/templates/Notes/addNotesTutor.html
@@ -13,7 +13,7 @@
     </div>
     {% endif %}
 </div>
-<div class="container">
+<div class="mt-5">
     <div class="col-md-12 col-12">
         <div class="card">
             <div class="card-header">
@@ -28,15 +28,15 @@
                 <form id='submitForm' method='post' action='' enctype='multipart/form-data'>{% csrf_token %}
                     <div class="row">
 
-                        <div class="col-md-12 col-lg-12 col-12 input-group form-group">
-                            <label class="control-label col-sm-2 col-md-2 col-5 mt-2 text-center"
+                        <div class="col-md-12 col-lg-6 col-12 input-group form-group">
+                            <label class="control-label col-sm-3 col-md-3 col-5 mt-2"
                                 style="color: black;">Title</label>
-                            <input type="text" step="0.01" class="form-control w-100 col-sm-10 col-md-10 col-7"
+                            <input type="text" step="0.01" class="form-control w-100 col-sm-8 col-md-8 col-7"
                                 id="title" name="title" placeholder="Enter Note Title" required>
                         </div>
 
                         <div class="col-md-6 col-lg-6 col-12 input-group form-group">
-                            <label class="control-label col-sm-3 col-md-4 col-5 mt-2 text-center"
+                            <label class="control-label col-sm-3 col-md-3 col-5 mt-2"
                                 style="color: black;">Course</label>
                             <select id="course" name="course"
                                 class="custom-select form-control w-100 col-md-8 col-sm-9 col-7" required>
@@ -48,7 +48,7 @@
                         </div>
 
                         <div class="col-md-6 col-lg-6 col-12 input-group form-group">
-                            <input type="file" class="ml-4 mt-2 form-control-file" id="file" name="note">
+                            <input type="file" class="ml-1 mt-2 form-control-file" id="file" name="note">
                         </div>
 
                         <div class="col-md-12 col-lg-12 col-12 input-group form-group">
@@ -64,7 +64,7 @@
         </div>
     </div>
 </div>
-<div class="container mt-4">
+<div class="mt-4">
     <div class="col-xl-12 col-md-12 col-12 mt-5">
         <div class="statbox widget box box-shadow">
             <div class="widget-header">
