--- a/templates/students/addStudents.html
+++ b/templates/students/addStudents.html
@@ -361,7 +361,7 @@
   }
 </style>
 {% endblock %}
-{% block body %}
+{% block main-content %}
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCBJybI10-Xa43-F5GSad1i0Y9W3yqlW6Q&libraries=places&v=3"
   defer></script>
 
@@ -783,4 +783,4 @@
   }
 </script>
 
-{% endblock %}
+{% endblock main-content %}
