--- a/templates/tutorials/viewTutorialsTutor.html
+++ b/templates/tutorials/viewTutorialsTutor.html
@@ -2,12 +2,12 @@
 {% load static %}
 {% block main-content %}
 <main>
-    <div class="container mt-4">
+    <div class="mt-5">
         <div class="card">
             <div class="card-header">
                 <div class="row">
                     <div class="col-lg-8 col-md-8 col-sm-8 col-12">
-                        <h2 style="color: black;">Add Tutorial</h2>
+                        <h2 style="color: black;">Tutorials</h2>
                     </div>
                 </div>
             </div>
