--- a/templates/Exam/Questions.html
+++ b/templates/Exam/Questions.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block main-content %}
 <script src="{% static 'js/tinymce/tinymce.min.js' %}"></script>
-<div class="container mt-5">
+<div class="mt-5">
   {% if messages %}
   {% for k in messages%}
   <div class="alert alert-{{k.tags}} alert-dismissible fade show" role="alert">
@@ -13,10 +13,10 @@
   </div>
   {% endfor %}
   {% endif %}
-  <main class="container mt-5">
+  <main>
     <div class="card">
-      <div class="row">
-        <div class="col ml-2" style="overflow: scroll;height: 1100px;">
+      <div class="mx-2 row">
+        <div class="col" style="overflow: scroll;height: 1240px;">
           <div class="row">
             <div class="col">
               <h4 class="text-center mt-2">{{exam.Name}}</h4>
@@ -172,7 +172,7 @@
           {% endfor %}
           {% endif %}
         </div>
-        <div class="col">
+        <div class="col mt-4">
           <form method="post">{% csrf_token %}
             <div class="row">
               <div class="col">
@@ -189,7 +189,7 @@
               <div class="col">
                 <div class="form-group">
                   <label for="exampleFormControlSelect1">Question Type</label>
-                  <select class="form-control" id="question_type_select" name="question_type">
+                  <select class="form-control" onchange="addop()" id="question_type_select" name="question_type">
                     <option value="sq">Short Type Questions</option>
                     <option value="lq">Long Type Questions</option>
                     <option value="mc">Multiple Choice Questions</option>
@@ -265,10 +265,17 @@
             </div>
             <div class="row">
               <div class="col">
-                <button type="submit" class="mb-3 btn btn-info">Save</button>
+                <div class="text-center">
+                  <button type="submit" class="mb-3 w-100 btn btn-outline-dark">Add Qustion</button>
+                </div>
               </div>
             </div>
           </form>
+        </div>
+      </div>
+      <div class="text-center">
+        <div class="col">
+          <a href="{% url 'questionalltutor' %}" class="mb-3 btn btn-info">Save</a>
         </div>
       </div>
     </div>
@@ -386,47 +393,40 @@
     });
   });
 
-  $(document).ready(function () {
-    $('#question_type_select').change(function () {
-      var type = $(this).val();
-      if (type == 'mc') {
-        var optioninput = '<div class="row mb-2" id="multipleinput">'
-        optioninput += '<div class="col">'
-        optioninput += '<input type="text" class="form-control" placeholder="Enter Value" name="options">'
-        optioninput += '</div>'
-        optioninput += '<div class="col-auto">'
-        optioninput += '<a onclick="addtext()" class="btn btn-primary mb-2" style="color:white;">Add Option</a>'
-        optioninput += '</div>'
-        optioninput += '</div>'
-        $('#solutionbox').append(optioninput);
-      } else {
-        $('#multipleinput').remove();
-        $('#multipleinput').remove();
-        $('#multipleinput').remove();
-        $('#multipleinput').remove();
-      }
-    });
-  });
-
-  $(document).ready(function () {
-    $('#question_type_select').change(function () {
-      var type = $(this).val();
-      if (type == 'tf') {
-        var optioninput = '<div class="row mb-2" id="multipleinput">'
-        optioninput += '<div class="col">'
-        optioninput += '<input type="text" class="form-control" placeholder="First Value" name="options">'
-        optioninput += '</div>'
-        optioninput += '</div>'
-        var anotherinput = '<div class="row mb-2" id="multipleinput">'
-        anotherinput += '<div class="col">'
-        anotherinput += '<input type="text" class="form-control" placeholder="Second Value" name="options">'
-        anotherinput += '</div>'
-        anotherinput += '</div>'
-        $('#solutionbox').append(optioninput);
-        $('#solutionbox').append(anotherinput);
-      }
-    });
-  });
+  function addop() {
+    var type = $('#question_type_select').val();
+    console.log(type);
+    if (type == 'mc') {
+      var optioninput = '<div class="row mb-2" id="multipleinput">'
+      optioninput += '<div class="col">'
+      optioninput += '<input type="text" class="form-control" placeholder="Enter Value" name="options">'
+      optioninput += '</div>'
+      optioninput += '<div class="col-auto">'
+      optioninput += '<a onclick="addtext()" class="btn btn-primary mb-2" style="color:white;">Add Option</a>'
+      optioninput += '</div>'
+      optioninput += '</div>'
+      $('#solutionbox').append(optioninput);
+    } else {
+      $('#multipleinput').remove();
+      $('#multipleinput').remove();
+      $('#multipleinput').remove();
+      $('#multipleinput').remove();
+    }
+    if (type == 'tf') {
+      var optioninput = '<div class="row mb-2" id="multipleinput">'
+      optioninput += '<div class="col">'
+      optioninput += '<input type="text" class="form-control" placeholder="First Value" name="options">'
+      optioninput += '</div>'
+      optioninput += '</div>'
+      var anotherinput = '<div class="row mb-2" id="multipleinput">'
+      anotherinput += '<div class="col">'
+      anotherinput += '<input type="text" class="form-control" placeholder="Second Value" name="options">'
+      anotherinput += '</div>'
+      anotherinput += '</div>'
+      $('#solutionbox').append(optioninput);
+      $('#solutionbox').append(anotherinput);
+    }
+  }
   $(document).ready(function () {
     $('#buttons').hide();
   });
