--- a/templates/Exam/viewExamsTutor.html
+++ b/templates/Exam/viewExamsTutor.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block main-content %}
 <main>
-    <div class="container mt-4">
+    <div class="mt-5">
     {% if messages %}
     {% for k in messages%}
     <div class="alert alert-{{k.tags}} alert-dismissible fade show" role="alert">
