--- a/templates/students/postTution.html
+++ b/templates/students/postTution.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block main-content %}
-<div class="container mt-5">
+<div class="mt-5">
     {% if errors %}
     <div class="alert alert-danger" role="alert">
         <div id='errorsBox'>
@@ -32,20 +32,20 @@
                 <form id='submitForm' method='post' action=''>{% csrf_token %}
                     <div class="row">
                         <div class="col-lg-4 col-md-4 col-sm-6 col-12 row mt-4">
-                            <label class="control-label col-sm-6 col-md-5 col-5 mt-2 text-center" style="color:black;">Class</label>
+                            <label class="control-label col-sm-6 col-md-5 col-5 mt-2" style="color:black;">Class</label>
                             <select id="className" name="className" class="col-sm-7 col-md-6 col-7 custom-select form-control w-100"
                                 onchange="subjects()">
                                 <option disabled selected>Class</option>
                             </select>
                         </div>
                         <div class="col-lg-4 col-md-6 col-sm-6 col-12 row mt-4">
-                            <label class="control-label col-sm-5 col-5 col-md-6 mt-2 text-center" style="color:black;">Course</label>
+                            <label class="control-label col-sm-5 col-5 col-md-6 mt-2" style="color:black;">Course</label>
                             <select id="subject" name="subject" class="col-sm-7 col-md-6 col-7 custom-select form-control w-100">
                                 <option disabled selected>Subject</option>
                             </select>
                         </div>
-                        <div class="col-lg-4 col-md-6 col-sm-6 col-12 row mt-4">
-                            <label class="control-label col-sm-4 col-7 col-md-6 mt-2 text-center" style="color:black;">Teaching Mode</label>
+                        <div class="mx-2 col-lg-4 col-md-6 col-sm-6 col-12 row mt-4">
+                            <label class="control-label col-sm-4 col-7 col-md-6 mt-2" style="color:black;">Teaching Mode</label>
                             <select name="tm" class="col-sm-8 col-5 col-md-6 custom-select form-control w-100" required="required">
                                 <option disabled selected value>Teaching Mode</option>
                                 <option value="Online Tutor">Online Tutor</option>
@@ -54,31 +54,31 @@
                             </select>
                         </div>
                         <div class="col-lg-4 col-md-6 col-sm-6 col-12 row mt-4">
-                            <label class="control-label col-sm-5 col-5 col-md-6 text-center mt-3" style="color:black;">Start Date</label>
+                            <label class="control-label col-sm-5 col-5 col-md-5 mt-3" style="color:black;">Start Date</label>
                             <input type="date" class="col-sm-7 col-7 col-md-6 form-control my-2 w-100" id="sd" name="sd" placeholder="Starting Date" required>
                         </div>
                         <div class="col-lg-4 col-md-6 col-sm-6 col-12 row mt-4">
-                            <label class="control-label col-md-6 col-sm-5 col-5 text-center mt-3" style="color:black;">Budget</label>
+                            <label class="control-label col-md-6 col-sm-5 col-5 mt-3" style="color:black;">Budget</label>
                             <input type="number" step="0.01" class="col-md-6 col-sm-7 col-7 form-control my-2 w-100" style="-moz-appearance: textfield;" min="0" id="budgetvalue"
                                 name="budgetvalue" placeholder="Budget" required>
                         </div>
-                        <div class="col-lg-4 col-md-6 col-sm-6 col-12 row mt-4">
-                            <label class="control-label col-sm-4 col-md-6 col-7 text-center mt-3" style="color:black;">No. of Sessions</label>
+                        <div class="mx-2 col-lg-4 col-md-6 col-sm-6 col-12 row mt-4">
+                            <label class="control-label col-sm-4 col-md-6 col-7 mt-3" style="color:black;">No. of Sessions</label>
                             <input type="number" class="col-sm-8 col-5 col-md-6 form-control my-2 w-100" id="monthlydigit" style="-moz-appearance: textfield;" min="0" name="monthlydigit" placeholder="No. of sessions">
                         </div>  
                         
-                        <div class="col-lg-6 col-md-6 col-sm-6 col-12 row mt-4">
-                            <label class="control-label col-sm-4 col-7 text-center mt-2" style="color:black;">Payment Type</label>
-                            <select id="budget" name="budget" class="col-sm-7 col-5 custom-select form-control w-100" required>
+                        <div class="col-lg-4 col-md-6 col-sm-6 col-12 row mt-4">
+                            <label class="control-label col-sm-5 col-7 mt-2" style="color:black;">Payment Type</label>
+                            <select id="budget" name="budget" class="col-sm-7 col-md-6 col-5 custom-select form-control w-100" required>
                                 <option disabled selected>Payment Type</option>
                                 <option value="monthly">Monthly</option>
                                 <option value="hourly">Hourly</option>
                             </select>
                         </div>
                         
-                        <div class="col-lg-6 col-md-6 col-sm-6 col-12 row mt-4">
-                            <label class="control-label col-sm-4 col-6 mt-2 text-center" style="color:black;">Prefered Gender</label>
-                            <select id="gp" name="gp" class="col-sm-7 col-6 custom-select form-control w-100" required="required">
+                        <div class="col-lg-4 col-md-6 col-sm-6 col-12 row mt-4">
+                            <label class="control-label col-sm-6 col-6 mt-2" style="color:black;">Prefered Gender</label>
+                            <select id="gp" name="gp" class="col-sm-7 col-md-6 col-6 custom-select form-control w-100" required="required">
                                 <option disabled selected value>Prefered Gender</option>
                                 <option value="Male">Male</option>
                                 <option value="Female">Female</option>
@@ -121,6 +121,7 @@
                                 <th>Budget</th>
                                 <th>Duration</th>
                                 <th>Action</th>
+                                <th></th>
                             </tr>
                             {% for tution in tutions reversed %}
                             <tr>
@@ -132,12 +133,71 @@
                                 <td>{{tution.whenToStart}}</td>
                                 <td>{{tution.budgetVal}}</td>
                                 <td>{{tution.numberOfSessions}}</td>
-                                <td class="text-center">
+                                <td>
                                     <a class="btn btn-danger"href="{% url 'Delete_Tution' tution.sno %}">
                                         <span class="flaticon-delete-4">
                                         </span>
                                     </a>
                                 </td>
+                                <td><button type="button" data-toggle="modal" data-target="#tutorModal{{tution.sno}}"
+                                    class="btn btn-info">View</button></td>
+                        </tr>
+
+                        <!-- view box -->
+                        <div class="modal fade" id="tutorModal{{tution.sno}}" tabindex="-1" role="dialog"
+                            aria-labelledby="{{tution.sno}}" aria-hidden="true" style="top:30%; color: black;">
+                            <div class="modal-dialog modal-lg align-item-center" role="document">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="col-sm-12 text-center" id="{{tution.sno}}">
+                                            {{tution.subject}} Tution</h5>
+                                    </div>
+                                    <div class="modal-body">
+                                        <div class="col-md-12">
+                                            <div class="row">
+                                                <div class="col-md-6 col-sm-6 col-12 mt-2">
+                                                    <b>Subject:</b>
+                                                    <span class="ml-1">{{tution.subject}}
+                                                    </span>
+                                                </div>
+                                                <div class="col-md-6 col-sm-6 col-12 mt-2">
+                                                    <b>Class:</b>
+                                                    <span class="ml-1">{{tution.forclass}}</span>
+                                                </div>
+                                                <div class="col-md-6 col-sm-6 col-12 mt-2">
+                                                    <b>Teaching Mode:</b>
+                                                    <span class="ml-1">{{tution.teachingMode}}</span>
+                                                </div>
+                                                <div class="col-md-6 col-sm-6 col-12 mt-2">
+                                                    <b>Gender Prefered:</b>
+                                                    <span class="ml-1">{{tution.whenToStart}}</span>
+                                                </div>
+                                                <div class="col-md-6 col-sm-6 col-12 mt-2">
+                                                    <b>Start Date:</b>
+                                                    <span class="ml-1">
+                                                        {{tution.whenToStart}}
+                                                    </span>
+                                                </div>
+                                                <div class="col-md-6 col-sm-6 col-12 mt-2">
+                                                    <b>Budget:</b>
+                                                    <span class="ml-1">
+                                                        {{tution.budgetVal}}
+                                                    </span>
+                                                </div>
+                                                <div class="col-md-6 col-sm-6 col-12 mt-2">
+                                                    <b>No. of Sessions:</b>
+                                                    <span class="ml-1">
+                                                        {{tution.numberOfSessions}}
+                                                    </span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <br>
+                            </div>
+                        </div>
+                        <!-- view box -->
                             </tr>
                             {% endfor %}
                         </table>
