--- a/templates/teacher/enrolledTutors.html
+++ b/templates/teacher/enrolledTutors.html
@@ -1,6 +1,5 @@
 {% extends 'dashboard/student-dashboard.html' %}
 {% load static %}
-{% load splitspace %}
 {% block extra-stylesheets %}
 
 <!-- CDN for google maps Place API -->
@@ -11,7 +10,7 @@
 {% endblock extra-stylesheets %}
 
 {% block main-content %}
-<div class="row layout-spacing">
+<div class="row mt-5 layout-spacing">
     <div class="col-lg-12">
         <div class="statbox widget box box-shadow">
             <div class="widget-header border-bottom border-default">
@@ -27,36 +26,47 @@
                         <form class="form-inline mt-2 mb-5" method="POST">
                             {% csrf_token %}
                             <div class="col-lg-4 col-md-6 col-12 mt-2 row">
-                                <label class="control-label col-sm-3 col-md-4 col-5 mt-2" style="color:black;">Location</label>
-                                <input type="text" class="form-control my-2 w-100 col-sm-9 col-md-8 col-7" id="pac-input"
-                                    name='loc' placeholder="Enter Location" required value="{{prefill.address}}">
+                                <label class="control-label col-sm-3 col-md-4 col-5 mt-3"
+                                    style="display:block; color:black;">Location</label>
+                                <input type="text" class="form-control my-2 w-100 col-sm-9 col-md-8 col-7"
+                                    id="pac-input" name='loc' placeholder="Enter Location" required
+                                    value="{{prefill.address}}">
                                 <input type="hidden" id="cityLat" value="0" name="cityLat" />
                                 <input type="hidden" id="cityLng" value="0" name="cityLng" />
                             </div>
                             <div class="col-lg-4 col-md-6 col-12 mt-2 row">
-                                <label class="control-label col-sm-3 col-md-4 col-5 mt-2" style="color:black;">Distance</label>
+                                <label class="control-label col-sm-3 col-md-4 col-5 mt-3"
+                                    style="display:block; color:black;">Distance</label>
                                 <input type="number" class="form-control my-2 w-100 col-md-8 col-sm-9 col-7"
-                                    style="-moz-appearance: textfield;" min="0" name="distance"
-                                    placeholder="Distance in KM">
+                                    style="-moz-appearance: textfield;" min="0" name="distance" placeholder="Distance in KM"
+                                    value={{prefill.distance}}>
                             </div>
                             <div class="col-lg-4 col-md-6 col-12 mt-2 row">
-                                <label class="control-label col-sm-3 col-md-5 col-5 mt-2" style="color:black;">Experience</label>
+                                <label class="control-label col-sm-3 col-md-5 col-5 mt-3"
+                                    style="display:block; color:black;">Experience</label>
                                 <input type="number" class="form-control my-2 w-100 col-md-7 col-sm-9 col-7"
                                     style="-moz-appearance: textfield;" min="0" name="experience"
                                     placeholder="Experience" value={{prefill.experience}}>
                             </div>
                             <div class="col-lg-4 col-md-6  col-12 mt-2 row">
-                                <label class="control-label col-sm-3 col-md-5 col-5 mt-2" style="color:black;">Class</label>
+                                <label class="control-label col-sm-3 col-md-4 col-5 mt-3"
+                                    style="display:block; color:black;">Class</label>
                                 <select id="className" name="className"
-                                    class="custom-select form-control w-100 col-sm-9 col-md-7 col-7" onchange="subjects()">
-                                    <option disabled selected>{{prefill.class}}</option>
+                                    class="custom-select form-control w-100 col-sm-9 col-md-8 col-7"
+                                    onchange="subjects()" placeholder="Class">
                                 </select>
                             </div>
                             <div class="col-lg-4 col-md-6  col-12 mt-2 row">
-                                <label class="control-label col-sm-3 col-md-5 mt-2 col-5" style="color:black;">Subject</label>
+                                <label class="control-label col-sm-3 col-md-4 mt-3 col-5"
+                                    style="display:block; color:black;">Subject</label>
                                 <select id="subject" name="subject"
-                                    class="custom-select form-control w-100 col-md-7 col-sm-9 col-7" placeholder="Subject">
-                                    <option disabled selected>{{prefill.subject}}</option>
+                                    class="custom-select form-control w-100 col-md-8 col-sm-9 col-7"
+                                    placeholder="Subject">
+                                    {% if prefill.subject %}
+                                    <option disabled selected value="{{prefill.subject}}">{{prefill.subject}}</option>
+                                    {% else %}
+                                    <option disabled selected value="">Subject</option>
+                                    {% endif %}
                                 </select>
                             </div>
                             <div class="col-lg-4 col-md-6  col-12 text-center">
@@ -80,7 +90,7 @@
                         <div class="card">
                             <div class="wrapper">
                                 <div class="row">
-                                    
+
                                     <div class="col-md-12">
                                         {% if i.photo %}
                                         <img src="{{i.photo}}" class="img-fluid w-100 text-center" alt="car-1"
@@ -91,7 +101,8 @@
                                         {% endif %}
                                     </div>
                                     <div class="col-md-12 mt-1 text-center">
-                                        <b style="text-transform: uppercase; color: black;">{{i.firstName}}{{i.lastName}}</b>
+                                        <b
+                                            style="text-transform: uppercase; color: black;">{{i.firstName}}{{i.lastName}}</b>
                                     </div>
                                     <div class="col-md-12 mt-1 text-center" style="color: black;">
                                         <div class="row">
@@ -367,12 +378,12 @@
     </div>
     {% endfor %}
     {% else %}
-    <div class="card container h-25 m-0">
+    <div class="card w-100 mx-3">
         <h5 class="mt-2 mb-2 p-2">No Data Found</h5>
     </div>
     {% endif %}
     <script>
-        
+
         //Getting Location Autofield from google places API
         $(document).on("DOMContentLoaded", function () {
             function initialize() {
@@ -388,7 +399,7 @@
         });
     </script>
     <script>
-    $("#submitAppointment").on("click", function () {
+        $("#submitAppointment").on("click", function () {
             form = $('#createAppointmentForm')[0];
             if (!form.checkValidity()) {
                 console.log("form error")
@@ -417,7 +428,7 @@
                     }
 
                 },
-                error: function (response) {}
+                error: function (response) { }
             });
 
         });
@@ -451,9 +462,18 @@
     <script>
         console.log("this is js")
         var className = document.getElementById("className")
-        var jsondata = {{jsonLocalData|safe}}
+        var jsondata = {{ jsonLocalData| safe}}
+        var prefillclass = "{{prefill.class}}"
         const keys = Object.keys(jsondata);
-        var classes = "<option disabled selected>Class</option>"
+        
+        if (prefillclass)
+        {
+            var classes = `<option disabled selected value="${prefillclass}">${prefillclass}</option>`
+        }
+        else
+        {
+            var classes = `<option disabled selected value="">Class</option>`
+        }
         for (let index = 0; index < keys.length; index++) {
             const element = keys[index];
             classes += `<option value="${element}">${element}</option>`
@@ -463,7 +483,7 @@
         function subjects() {
             var className = document.getElementById("className").value
             var subject = document.getElementById("subject")
-            html = "<option disabled selected>Subject</option>"
+            var html=''
             class_subjects = jsondata[`${className}`]
             for (let index = 0; index < class_subjects.length; index++) {
                 const element = class_subjects[index];
