--- a/templates/teacher/viewAssignmentTutor.html
+++ b/templates/teacher/viewAssignmentTutor.html
@@ -10,7 +10,7 @@
 
 {% endblock extra-stylesheets %}
 {% block main-content %}
-<div class="container mt-2">
+<div class="mt-5">
   <div class="col-lg-12">
     <div class="statbox widget box box-shadow">
       <div class="widget-header border-bottom border-default">
@@ -25,35 +25,39 @@
           <div class="col-lg-12 col-md-12 cms-search">
             <form class="form-inline mt-2 mb-5" method="POST">
               {% csrf_token %}
-              <div class="col-lg-6 col-md-6 col-12 mt-2 row">
-                <label class="control-label col-sm-3 col-md-4 col-5 mt-2" style="color:black;">Location</label>
+              <div class="col-lg-5 col-md-6 col-12 mt-2 row">
+                <label class="control-label col-sm-3 col-md-4 col-5 mt-3" style="display: block; color:black;">Location</label>
                 <input type="text" class="form-control my-2 w-100 col-sm-9 col-md-8 col-7" id="pac-input" name='loc'
                   placeholder="Enter Location" required value="{{prefill.address}}">
                 <input type="hidden" id="cityLat" value="0" name="cityLat" />
                 <input type="hidden" id="cityLng" value="0" name="cityLng" />
               </div>
-              <div class="col-lg-6 col-md-6 col-12 mt-2 row">
-                <label class="control-label col-sm-3 col-md-4 col-5 mt-2" style="color:black;">Budget</label>
+              <div class="col-lg-5 col-md-6 col-12 mt-2 row">
+                <label class="control-label col-sm-3 col-md-4 col-5 mt-3" style="display: block; color:black;">Budget</label>
                 <input type="number" class="form-control my-2 w-100 col-md-8 col-sm-9 col-7"
-                  style="-moz-appearance: textfield;" min="0" name="budget" placeholder="Budget">
+                  style="-moz-appearance: textfield;" min="0" name="budget" value="{{prefill.budget}}"
+                  placeholder="Budget">
               </div>
-              <div class="col-lg-4 col-md-6  col-12 mt-2 row">
-                <label class="control-label col-sm-3 col-md-5 col-5 mt-2" style="color:black;">Class</label>
-                <select id="className" name="className" class="custom-select form-control w-100 col-sm-9 col-md-7 col-7"
+              <div class="col-lg-5 col-md-6  col-12 mt-2 row">
+                <label class="control-label col-sm-3 col-md-4 col-5 mt-3" style="display: block; color:black;">Class</label>
+                <select id="className" name="className" class="custom-select form-control w-100 col-sm-9 col-md-8 col-7"
                   onchange="subjects()">
-                  <option disabled selected>{{prefill.class}}</option>
                 </select>
               </div>
-              <div class="col-lg-4 col-md-6  col-12 mt-2 row">
-                <label class="control-label col-sm-3 col-md-5 mt-2 col-5" style="color:black;">Subject</label>
-                <select id="subject" name="subject" class="custom-select form-control w-100 col-md-7 col-sm-9 col-7"
+              <div class="col-lg-5 col-md-6  col-12 mt-2 row">
+                <label class="control-label col-sm-3 col-md-4 mt-3 col-5" style="display: block; color:black;">Subject</label>
+                <select id="subject" name="subject" class="custom-select form-control w-100 col-md-8 col-sm-9 col-7"
                   placeholder="Subject">
-                  <option disabled selected>{{prefill.subject}}</option>
+                  {% if prefill.subject %}
+                  <option disabled selected value="{{prefill.subject}}">{{prefill.subject}}</option>
+                  {% else %}
+                  <option disabled selected value="">Subject</option>
+                  {% endif %}
                 </select>
               </div>
-              <div class="col-lg-4 col-md-6  col-12 text-center">
-                <button class="my-2 ml-2 btn btn-info">Search</button>
-              </div>
+              <div class="col-lg-2 col-md-2 col-12 mt-2 d-flex justify-content-end">
+                <button class="btn btn-info">Search</button>
+                </div>
             </form>
           </div>
         </div>
@@ -83,7 +87,7 @@
         <td>{{assing.courseName}}</td>
         <td>{{assing.forclass}}</td>
         <td>{{assing.requirement}}</td>
-        <td>{{assing.student.phone}}</td>td>
+        <td>{{assing.student.phone}}</td>
         <td>{{assing.timestamp|naturaltime}}</td>
         <td>{{assing.budget}}</td>
         <td class="text-center">
@@ -99,9 +103,16 @@
 <script>
   console.log("this is js")
   var className = document.getElementById("className")
-  var jsondata = {{jsonLocalData|safe}}
+  var jsondata = {{ jsonLocalData| safe}}
+  var prefillclass = "{{prefill.class}}"
   const keys = Object.keys(jsondata);
-  var classes = "<option disabled selected>Class</option>"
+
+  if (prefillclass) {
+    var classes = `<option disabled selected value="${prefillclass}">${prefillclass}</option>`
+  }
+  else {
+    var classes = `<option disabled selected value="">Class</option>`
+  }
   for (let index = 0; index < keys.length; index++) {
     const element = keys[index];
     classes += `<option value="${element}">${element}</option>`
@@ -111,7 +122,7 @@
   function subjects() {
     var className = document.getElementById("className").value
     var subject = document.getElementById("subject")
-    html = "<option disabled selected>Subject</option>"
+    var html=''
     class_subjects = jsondata[`${className}`]
     for (let index = 0; index < class_subjects.length; index++) {
       const element = class_subjects[index];
