--- a/templates/tutorials/AddTutorCourseVideos.html
+++ b/templates/tutorials/AddTutorCourseVideos.html
@@ -4,7 +4,7 @@
 {% block main-content %}
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCBJybI10-Xa43-F5GSad1i0Y9W3yqlW6Q&libraries=places&v=3" defer></script>
 
-<div class="container">
+<div class="mt-5">
     <div class="col-lg-12 col-md-12 col-sm-12 col-12" style="color:black;">
         <div class="card">
             <div class="card-header">
