--- a/templates/tutorials/ArchievedTutorialsTutor.html
+++ b/templates/tutorials/ArchievedTutorialsTutor.html
@@ -3,7 +3,7 @@
 
 {% block main-content %}
     <main>
-        <div class="container mt-4">
+        <div class="mt-5">
         <div class="card">
             <div class="card-header">
                 <div class="row">
@@ -53,7 +53,7 @@
                     <!--Table-->
                 </div>
                     <div class="form-group">
-                        <input type="submit" value="Move to Archive" class="btn btn-danger float-right">
+                        <input type="submit" value="Remove from Archive" class="btn btn-danger float-right">
                     </div>
                     <br>
                 </form>
