--- a/templates/tutorials/watchTutorialStudent.html
+++ b/templates/tutorials/watchTutorialStudent.html
@@ -2,15 +2,16 @@
 {% load static %}
 {% block main-content %}
 <main>
-  <div class="container mt-4">
+  <div class="mt-4">
     <div class="card">
       <div class="card-body">
       <div class="row">
         <div class="col-lg-9 col-md-9 col-12 mt-2">
-          <video id="my-video" controls>
+          <video id="my-video" controls style="width: 100%;">
             <source id="nowplaying" src="{{start}}" />
           </video>
         </div>
+        {% if tutorial.tutorplaylist.all or tutorial.playlist.all  %}
         {% if tutorial.tutorplaylist.all %}
           <div class="col-lg-3 col-md-3 col-12 mt-2">
             <div id="accordion">
@@ -38,13 +39,49 @@
               {% endfor %}
             </div>
           </div>
-          <div class="col-lg-12 col-md-12 card col-12 mt-2">
+          <div class="col-lg-12 col-md-12 card col-12 mt-2" style="border: none;">
             <h2 class="text-dark">Course Content</h2>
             <p>{{tutorial.tutorplaylist.all.count}} lectures • {{total_length}}</p>
             {{tutorial.Description}}
           </div>
         </div>
       </div>
+      {% endif %}
+      {% if tutorial.playlist.all %}
+          <div class="col-lg-3 col-md-3 col-12 mt-2">
+            <div id="accordion">
+              {% for item  in tutorial.playlist.all %}
+              <div class="card">
+                <div class="card-header" id="heading">
+                  <h5 class="mb-0">
+                    <button class="btn btn-info" data-toggle="collapse" data-target="#collapse{{item.id}}"
+                      aria-expanded="true" aria-controls="collapseOne">
+                      {{ item.Title}}
+                    </button>
+                  </h5>
+                </div>
+                <div id="collapse{{item.id}}" class="collapse show" aria-labelledby="headingOne"
+                  data-parent="#accordion">
+                  <div class="card-body">
+                    {{item.Description}}
+                    <div class="container p-0">
+                      <button class="btn btn-warning mr-5" onclick="myFunction('{{item.Video.url}}')"><i
+                          class="flaticon-youtube-play-fill" style="size:2rem;"></i></button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              {% endfor %}
+            </div>
+          </div>
+          <div class="col-lg-12 col-md-12 card col-12 mt-2" style="border: none;">
+            <h2 class="text-dark">Course Content</h2>
+            <p>{{tutorial.playlist.all.count}} lectures • {{total_length}}</p>
+            {{tutorial.Description}}
+          </div>
+        </div>
+      </div>
+      {% endif %}
       {% else %}
       <div class="card mt-4">
         <div class="card-body">
