--- a/templates/tutorials/watchTutorialTutor.html
+++ b/templates/tutorials/watchTutorialTutor.html
@@ -3,12 +3,12 @@
 
 {% block main-content %}
 <main>
-  <div class="container mt-4">
+  <div class="mt-4">
     <div class="card">
       <div class="card-body">
       <div class="row">
         <div class="col-lg-9 col-md-9 col-12 mt-2">
-          <video id="my-video" class="videoPlayer" controls>
+          <video id="my-video" class="videoPlayer" controls style="width: 100%;">
             <source id="nowplaying" src="{{start}}" />
           </video>
         </div>
@@ -39,7 +39,7 @@
               {% endfor %}
             </div>
           </div>
-          <div class="col-lg-12 col-md-12 card col-12 mt-2">
+          <div class="col-lg-12 col-md-12 card col-12 mt-2" style="border: none;">
             <h2 class="text-dark">Course Content</h2>
             <p>{{tutorial.tutorplaylist.all.count}} lectures • {{total_length}}</p>
             {{tutorial.Description}}
